workloads/teleskope_backend_svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: teleskope
  name: teleskope-backend-svc
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app.kubernetes.io/name: teleskope-backend
  sessionAffinity: None
  type: ClusterIP
