workloads/teleskope_frontend_svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: teleskope
  name: teleskope-frontend-svc
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/name: teleskope-frontend
  sessionAffinity: None
  type: ClusterIP
